more alignment fixes

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -1271,6 +1271,15 @@
             border-bottom: 0;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
+
+            img {
+                margin-right: 0;
+            }
+
+            > div {
+                display: inline-flex;
+                align-items: center;
+            }
         }
 
         &.isSigned.isWarning {
